--- a/index.html
+++ b/index.html
@@ -11,5 +11,15 @@
   <div class="container">
     <div id="language">
       <h1>Want To Start A New Career?</h1>
-  </div>
+  
+      <h2>Tell us about yourself, and we'll help you choose the right path!</h2>
+      <h3>What type of tech career would you like to have?</h3>
+    <div class "radio">
+      <label>
+        <input type="radio" name="typeTech" value="cryptoLife" checked>
+        That Crypto Life
+      </label>
+    </div>
+      </ul>
+    </div>
 </body>
