make changes to html.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
         That Crypto Life
       </label>
     </div>
+    <div class "radio">
+      <label>
+        <input type="radio" name="typeTech" value="webDesign">
+        Web Design
+      </label>
+    </div>
+    <div class "radio">
+      <label>
+        <input type="radio" name="typeTech" value="hackerGenius" checked>
+        Hacker Genius
+      </label>
+    </div>
       </ul>
     </div>
 </body>
