--- a/index.html
+++ b/index.html
@@ -28,10 +28,110 @@
     </div>
     <div class "radio">
       <label>
-        <input type="radio" name="typeTech" value="hackerGenius" checked>
+        <input type="radio" name="typeTech" value="hackerGenius">
         Hacker Genius
       </label>
     </div>
-      </ul>
-    </div>
+    <h3>What tech language would you like to focus on?</h3>
+  <div class "radio">
+    <label>
+      <input type="radio" name="language" value="javaScript" checked>
+      JavaScript
+    </label>
+  </div>
+  <div class "radio">
+    <label>
+      <input type="radio" name="language" value="Python">
+      Python
+    </label>
+  </div>
+  <div class "radio">
+    <label>
+      <input type="radio" name="language" value="Ruby">
+      Ruby
+    </label>
+  </div>
+  <div class "radio">
+    <label>
+      <input type="radio" name="language" value="Go">
+      Go
+    </label>
+  </div>
+  <h3>Where would you like to work?</h3>
+  <div class "radio">
+    <label>
+      <input type="radio" name="location" value="fromBed" checked>
+      From Bed
+    </label>
+  </div>
+  <div class "radio">
+    <label>
+      <input type="radio" name="location" value="theRitzCarlton">
+      The Ritz Carlton
+    </label>
+  </div>
+  <div class "radio">
+    <label>
+      <input type="radio" name="location" value="Google">
+      Google
+    </label>
+  </div>
+  <div class "radio">
+    <label>
+      <input type="radio" name="location" value="traveling">
+      A Different Country Every Month
+    </label>
+  </div>
+  <h3>What type of music helps you work?</h3>
+  <div class "radio">
+    <label>
+      <input type="radio" name="music" value="techno" checked>
+      Techno
+    </label>
+  </div>
+  <div class "radio">
+    <label>
+      <input type="radio" name="music" value="classical">
+      Claude Debussy, Clair de Lune, L.32
+    </label>
+  </div>
+  <div class "radio">
+    <label>
+      <input type="radio" name="music" value="americanRock">
+      Rage Against the Machine
+    </label>
+  </div>
+  <div class "radio">
+    <label>
+      <input type="radio" name="music" value="hipHop">
+      West Coast Rap
+    </label>
+  </div>
+  <h3>What pet will help you to be most successful?</h3>
+  <div class "radio">
+    <label>
+      <input type="radio" name="pet" value="aParrot" checked>
+      A Talking Parrot
+    </label>
+  </div>
+  <div class "radio">
+    <label>
+      <input type="radio" name="pet" value="houndDog">
+      Goodest Boi Hound Dog
+    </label>
+  </div>
+  <div class "radio">
+    <label>
+      <input type="radio" name="pet" value="fluffyCat">
+      The Fluffiest Kitty There Is
+    </label>
+  </div>
+  <div class "radio">
+    <label>
+      <input type="radio" name="pet" value="fennecFox">
+      A Fennec Fox 
+    </label>
+  </div>
+  
+  </div>
 </body>
