make changes to scripts.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <div id="language">
+    <form id="techCareer">
       <h1>Want To Start A New Career?</h1>
   
       <h2>Tell us about yourself, and we'll help you choose the right path!</h2>
@@ -53,8 +53,8 @@
   </div>
   <div class "radio">
     <label>
-      <input type="radio" name="language" value="Go">
-      Go
+      <input type="radio" name="language" value="Solidity">
+      Solidity
     </label>
   </div>
   <h3>Where would you like to work?</h3>
@@ -112,26 +112,31 @@
     <label>
       <input type="radio" name="pet" value="aParrot" checked>
       A Talking Parrot
-    </label>
-  </div>
-  <div class "radio">
-    <label>
-      <input type="radio" name="pet" value="houndDog">
+        </label>
+      </div>
+      <div class "radio">
+        <label>
+        <input type="radio" name="pet" value="houndDog">
       Goodest Boi Hound Dog
-    </label>
-  </div>
-  <div class "radio">
-    <label>
-      <input type="radio" name="pet" value="fluffyCat">
+        </label>
+      </div>
+      <div class "radio">
+        <label>
+        <input type="radio" name="pet" value="fluffyCat">
       The Fluffiest Kitty There Is
-    </label>
-  </div>
-  <div class "radio">
-    <label>
-      <input type="radio" name="pet" value="fennecFox">
+        </label>
+      </div>
+      <div class "radio">
+        <label>
+        <input type="radio" name="pet" value="fennecFox">
       A Fennec Fox 
-    </label>
-  </div>
-  
+        </label>
+      </div>
+      <button type="submit" class="btn">Show My Dream Job</button>
+    </form>
+    <div id="output">
+    
+    </div>
   </div>
 </body>
+</html>
