add README and update css.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <form id="techCareer">
-      <h1>Want To Start A New Career?</h1>
+      <h1><em>Want To Start A New Career?</em></h1>
   
       <h2>Tell us about yourself, and we'll help you choose the right path!</h2>
       <h3>What type of tech career would you like to have?</h3>
